# sr_download

./: .gitignore  Cargo.toml  api.md  config_template.toml  get_sr_save.py  main.ps1  pages.md  parse.py  readme.md  update.md
bencher/: request.ts
dashboard/: Cargo.toml
db_part/: Cargo.toml
db_part/src/: lib.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20240719_000001_create_main_data_table.rs  m20240719_00001_create_main_data_table.rs  m20240719_00002_create_long_data_table.rs  m20240719_101428_create_long_data_table.rs  m20240721_00003_create_indexs.rs  m20240721_221623_create_indexs.rs  main.rs
sr_download/: Cargo.toml
sr_download/assets/: dark.js  info.css  info.html  info.js
sr_download/sql/: xml_parse.py
sr_download/src/: config.rs  db.rs  db_part.rs  fast_mode.rs  get-save.rs  info.html  lib.rs  main.rs  net.rs  save_1294489.xml  serve.rs  serve_mode.rs  web_part.rs
sr_download/src/db/: long_data.rs  main_data.rs  mod.rs  sea_orm_active_enums.rs
sr_download/src/db_part/: defines.rs  definitions.rs  search.rs  updates.rs  utils.rs
sr_download/src/db_part/defines/: full_data_view.rs  long_data_table.rs  main_data_table.rs  ships_table.rs
sr_download/src/model/: long_data.rs  main_data.rs  prelude.rs  readme.md  sea_orm_active_enums.rs
sr_download/src/serve/: traits.rs
sr_download/src/web_part/: assets.rs  cache.rs  handlers.rs  models.rs  response.rs  traits.rs
sr_download/src/xml_part/: convert.rs  error.rs  mod.rs  model.rs  parse.rs  raw.rs  verify.rs  write.rs
