[package]
name = "migration"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }

[dependencies.sea-orm-migration]
version = "*"
features = [
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
