[package]
name = "sr_download"
version = "1.3.0"
edition = "2024"
default-run = "sr_download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# rustls 大法好!(默认使用 rustls, 用于 musl 环境)
reqwest = { version = "0.13", features = [
    "rustls",
    "http2",
    "charset",
], default-features = false }

colored = "3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }

futures = "0.3"
tokio = { version = "1.51", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }

axum = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }

serde = { version = "1.0", features = ["serde_derive"] }
toml = "1.1.2"
blake3 = "1.8.4"
quick-xml = { version = "0.39", features = ["serialize"] }
chrono = "0.4"
humantime = "2.3"
clap = { version = "4.6", features = ["derive"] }
